# rainguage

archive/rainguage/: Cargo.toml
devenv/: README.md  setup.sh
downlink-firmware-c/: downlink-firmware-c.ino  receive_test.ino
downlink-processor/: .env.sample  Cargo.toml  README.md  docker-compose.yml  downlink-telemetry.sh  psql.sh
downlink-processor/infrastructure/grafana/: Dockerfile
downlink-processor/infrastructure/grafana/dashboards/: rainguage.json
downlink-processor/infrastructure/grafana/provisioning/dashboards/: rainguage.yaml
downlink-processor/infrastructure/grafana/provisioning/datasources/: pg.yaml
downlink-processor/src/: main.rs
parts/: holder.scad  rainmeter.scad  rainmeter.stl  rainmeter_printing.stl
rainguage-downlink-firmware/: Cargo.toml  README.md  flash.sh
rainguage-downlink-firmware/src/: main.rs
rainguage-firmware/: Cargo.toml  README.md  flash.sh
rainguage-firmware/src/: analog_pin.rs  buffer.rs  dht22.rs  main.rs  metrics.rs  usb_write.rs
rainguage-messages/: Cargo.toml  README.md
rainguage-messages/src/: lib.rs
src/: lib.rs
telemetry-http-service/: .dockerignore  Cargo.toml  Dockerfile  build.sh
telemetry-http-service/src/: main.rs  persister.rs
