[package]
name = "downlink-processor"
version = "0.1.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]
edition = "2018"

[dependencies]
rainguage-messages = { path="../rainguage-messages" }
"chrono" = "0.4"
log = "0.4.11"
simplelog = "0.8.0"
dotenv = "0.15.0"

[dependencies.postgres]
version = "0.17.5"
features = ["with-chrono-0_4"]
