[package]
name = "rainguage_downlink_firmware"
version = "0.1.0"
authors = ["Ben Bergman <ben@benbergman.ca>"]
description = "Board Support crate for the Adafruit Feather M0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
rainguage-messages = { path="../rainguage-messages" }
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
cortex-m-rt = "~0.6.12"
panic-halt = "~0.2"
usb-device = "~0.2"
usbd-serial = "~0.1"
sx127x_lora = "0.3.1"

[dependencies.feather_m0]
version="0.6.1"
features=["usb", "rt", "unproven"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"