[package]
name = "rainguage-messages"
version = "0.1.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "0.5.0"
serde = { version = "1.0", default-features = false }
byteorder = { version = "1", default-features = false }

[dependencies.crc]
# The master / 2.0.0 version of crc has nostd support.
git = "https://github.com/mrhooray/crc-rs"
rev = "86696be09b7605d27327bbe659ac6c0e990c267f"